[package]
name = "rerev2_proper_camera_mod"
authors = ["mactec"]
version = "0.1.0"
readme = "README.md"
edition = "2018"

[dependencies]
cfg-if = "0.1.10"
generic-array = "0.13.0"
lazy_static = "1.3.0"
libc = "0.2.45"
mmap = { package = "mmap-fixed", version = "0.1.0" }
region = "2.0.0"
slice-pool = "0.4.1"
winapi = { version = "0.3", features = [
    "consoleapi", "utilapiset", "errhandlingapi", "fileapi", "handleapi", "winuser", "minwinbase", "minwindef", "processthreadsapi", "std", "synchapi", "unknwnbase", "winbase", "wincon", "winerror", "winnt",
] }
detour = "0.7.1"

[dev-dependencies]
matches = "0.1.8"

[features]
default = ["nightly"]
nightly = []

[lib]
name = "rerev2_mod"
path = "src/dllmain.rs"
crate-type = ["cdylib"]
